--- a/widgets_ui/browse_modules.ui
+++ b/widgets_ui/browse_modules.ui
@@ -18,7 +18,7 @@
     <rect>
      <x>40</x>
      <y>340</y>
-     <width>1461</width>
+     <width>901</width>
      <height>20</height>
     </rect>
    </property>
@@ -74,30 +74,19 @@ background-color: rgb(238, 238, 236);
    </property>
    <item>
     <property name="text">
-     <string>     RUNNING</string>
+     <string>-</string>
     </property>
    </item>
    <item>
     <property name="text">
-     <string>     FAULTY</string>
+     <string>OK</string>
     </property>
    </item>
-  </widget>
-  <widget class="QLabel" name="label_8">
-   <property name="geometry">
-    <rect>
-     <x>330</x>
-     <y>250</y>
-     <width>61</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
-   </property>
-   <property name="text">
-    <string>Show:</string>
-   </property>
+   <item>
+    <property name="text">
+     <string>Faulty</string>
+    </property>
+   </item>
   </widget>
   <widget class="QLineEdit" name="Enter_MODID">
    <property name="geometry">
@@ -123,7 +112,17 @@ background-color: rgb(238, 238, 236);
    </property>
    <item>
     <property name="text">
-     <string>    LOUVAIN</string>
+     <string>-</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Louvain</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>CERN</string>
     </property>
    </item>
   </widget>
@@ -148,7 +147,7 @@ background-color: rgb(238, 238, 236);
     <rect>
      <x>90</x>
      <y>150</y>
-     <width>311</width>
+     <width>51</width>
      <height>21</height>
     </rect>
    </property>
@@ -158,7 +157,7 @@ background-color: rgb(238, 238, 236);
 </string>
    </property>
    <property name="text">
-    <string>  Selection Criteria and showing Modules proprties </string>
+    <string>Filters</string>
    </property>
   </widget>
   <widget class="QRadioButton" name="MOD_hasknownProb">
@@ -204,20 +203,17 @@ background-color: rgb(238, 238, 236);
     </property>
    </item>
   </widget>
-  <widget class="QFrame" name="frame">
+  <widget class="QFrame" name="table_frame">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>400</y>
-     <width>1561</width>
+     <width>931</width>
      <height>301</height>
     </rect>
-   </property>
-   <property name="minimumSize">
-    <size>
-     <width>1541</width>
-     <height>0</height>
-    </size>
    </property>
    <property name="styleSheet">
     <string notr="true"/>
@@ -233,7 +229,7 @@ background-color: rgb(238, 238, 236);
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>1541</width>
+      <width>911</width>
       <height>281</height>
      </rect>
     </property>
@@ -248,32 +244,32 @@ background-color: rgb(238, 238, 236);
     </property>
     <column>
      <property name="text">
-      <string>QUANTITY</string>
+      <string>Barcode</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>TYPE</string>
+      <string>Type</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>LOCATION</string>
+      <string>Thickness</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>STATUS</string>
+      <string>Location</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>LAST ACTION</string>
+      <string>Last action</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>OPERATOR</string>
+      <string>Tests status</string>
      </property>
     </column>
    </widget>
@@ -305,30 +301,29 @@ background-color: rgb(238, 238, 236);
    </property>
    <item>
     <property name="text">
-     <string>     VALIDATION</string>
+     <string>-</string>
     </property>
    </item>
    <item>
     <property name="text">
-     <string/>
+     <string>Placement</string>
     </property>
    </item>
-  </widget>
-  <widget class="QRadioButton" name="show_MODhist">
-   <property name="geometry">
-    <rect>
-     <x>380</x>
-     <y>280</y>
-     <width>121</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
-   </property>
-   <property name="text">
-    <string>Module History</string>
-   </property>
+   <item>
+    <property name="text">
+     <string>Power</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Optical</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Test</string>
+    </property>
+   </item>
   </widget>
   <widget class="QLabel" name="label_4">
    <property name="geometry">
@@ -402,22 +397,6 @@ background-color: rgb(238, 238, 236);
    </property>
    <property name="text">
     <string>Concerned by:</string>
-   </property>
-  </widget>
-  <widget class="QRadioButton" name="show_MODNbr">
-   <property name="geometry">
-    <rect>
-     <x>380</x>
-     <y>220</y>
-     <width>121</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
-   </property>
-   <property name="text">
-    <string>Module Count</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_7">
@@ -541,6 +520,32 @@ background-color: rgb(238, 238, 236);
     <string>Dee surface:</string>
    </property>
   </widget>
+  <widget class="QFrame" name="module_frame">
+   <property name="geometry">
+    <rect>
+     <x>959</x>
+     <y>29</y>
+     <width>621</width>
+     <height>671</height>
+    </rect>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <widget class="QTextBrowser" name="module_data">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>601</width>
+      <height>651</height>
+     </rect>
+    </property>
+   </widget>
+  </widget>
   <action name="actionScan">
    <property name="icon">
     <iconset>
@@ -554,21 +559,18 @@ background-color: rgb(238, 238, 236);
   <zorder>label_2</zorder>
   <zorder>label_6</zorder>
   <zorder>ComboBox_Status</zorder>
-  <zorder>label_8</zorder>
   <zorder>Enter_MODID</zorder>
   <zorder>ComboBox_MODLocation</zorder>
   <zorder>label_9</zorder>
   <zorder>MOD_hasknownProb</zorder>
   <zorder>ComboBox_FilterMODByTests</zorder>
-  <zorder>frame</zorder>
+  <zorder>table_frame</zorder>
   <zorder>line_2</zorder>
   <zorder>ComboBox_LastAction</zorder>
-  <zorder>show_MODhist</zorder>
   <zorder>label_4</zorder>
   <zorder>MOD_hasNoknownProb</zorder>
   <zorder>sel_all</zorder>
   <zorder>sel_problem</zorder>
-  <zorder>show_MODNbr</zorder>
   <zorder>label_7</zorder>
   <zorder>label_5</zorder>
   <zorder>ScanMOD</zorder>
@@ -577,6 +579,7 @@ background-color: rgb(238, 238, 236);
   <zorder>checkBox_DeeSurface1</zorder>
   <zorder>CheckBox_DeeSurface2</zorder>
   <zorder>label_11</zorder>
+  <zorder>module_frame</zorder>
  </widget>
  <resources/>
  <connections/>
