--- a/widgets_ui/browse_modules.ui
+++ b/widgets_ui/browse_modules.ui
@@ -44,110 +44,22 @@ background-color: rgb(238, 238, 236);
     <string>  Status</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_6">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>210</y>
-     <width>61</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
-   </property>
-   <property name="text">
-    <string>Location:</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="ComboBox_Status">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>250</y>
-     <width>151</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
-   </property>
-   <item>
-    <property name="text">
-     <string>-</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>OK</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Faulty</string>
-    </property>
-   </item>
-  </widget>
   <widget class="QLineEdit" name="Enter_MODID">
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>110</y>
+     <y>140</y>
      <width>201</width>
      <height>25</height>
     </rect>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="ComboBox_MODLocation">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>210</y>
-     <width>151</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
-   </property>
-   <item>
-    <property name="text">
-     <string>-</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Louvain</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>CERN</string>
-    </property>
-   </item>
-  </widget>
-  <widget class="QLabel" name="label_9">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>290</y>
-     <width>81</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
-   </property>
-   <property name="text">
-    <string>Last action:</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
      <x>90</x>
-     <y>150</y>
-     <width>51</width>
+     <y>180</y>
+     <width>41</width>
      <height>21</height>
     </rect>
    </property>
@@ -278,7 +190,7 @@ background-color: rgb(238, 238, 236);
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>150</y>
+     <y>180</y>
      <width>611</width>
      <height>20</height>
     </rect>
@@ -287,49 +199,11 @@ background-color: rgb(238, 238, 236);
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
-  <widget class="QComboBox" name="ComboBox_LastAction">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>290</y>
-     <width>151</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
-   </property>
-   <item>
-    <property name="text">
-     <string>-</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Placement</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Power</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Optical</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Test</string>
-    </property>
-   </item>
-  </widget>
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>110</y>
+     <y>140</y>
      <width>161</width>
      <height>21</height>
     </rect>
@@ -399,27 +273,11 @@ background-color: rgb(238, 238, 236);
     <string>Concerned by:</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_7">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>250</y>
-     <width>61</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
-   </property>
-   <property name="text">
-    <string>Status:</string>
-   </property>
-  </widget>
   <widget class="QCommandLinkButton" name="ScanMOD">
    <property name="geometry">
     <rect>
      <x>420</x>
-     <y>100</y>
+     <y>130</y>
      <width>71</width>
      <height>41</height>
     </rect>
@@ -430,94 +288,6 @@ background-color: rgb(238, 238, 236);
    <property name="icon">
     <iconset>
      <normaloff>../Icons/scan.png</normaloff>../Icons/scan.png</iconset>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_10">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>80</y>
-     <width>161</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Ubuntu Condensed</family>
-     <pointsize>12</pointsize>
-     <weight>50</weight>
-     <italic>false</italic>
-     <bold>false</bold>
-     <underline>false</underline>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
-   </property>
-   <property name="text">
-    <string>Dee ID:</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="Enter_DeeID">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>80</y>
-     <width>201</width>
-     <height>25</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QCheckBox" name="checkBox_DeeSurface1">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>50</y>
-     <width>92</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>surface1</string>
-   </property>
-  </widget>
-  <widget class="QCheckBox" name="CheckBox_DeeSurface2">
-   <property name="geometry">
-    <rect>
-     <x>320</x>
-     <y>50</y>
-     <width>92</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>surface2</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_11">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>50</y>
-     <width>161</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Ubuntu Condensed</family>
-     <pointsize>12</pointsize>
-     <weight>50</weight>
-     <italic>false</italic>
-     <bold>false</bold>
-     <underline>false</underline>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
-   </property>
-   <property name="text">
-    <string>Dee surface:</string>
    </property>
   </widget>
   <widget class="QFrame" name="module_frame">
@@ -535,7 +305,7 @@ background-color: rgb(238, 238, 236);
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
-   <widget class="QWebView" name="module_data">
+   <widget class="QWebView" name="module_data" native="true">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -546,6 +316,394 @@ background-color: rgb(238, 238, 236);
     </property>
    </widget>
   </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>100</y>
+     <width>91</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 75 12pt &quot;Ubuntu Condensed&quot;;
+background-color: rgb(238, 238, 236);
+</string>
+   </property>
+   <property name="text">
+    <string>Single module</string>
+   </property>
+  </widget>
+  <widget class="Line" name="line_3">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>100</y>
+     <width>611</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_4">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>10</y>
+     <width>611</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_12">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>10</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 75 12pt &quot;Ubuntu Condensed&quot;;
+background-color: rgb(238, 238, 236);
+</string>
+   </property>
+   <property name="text">
+    <string>Select Dee</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="horizontalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>34</x>
+     <y>29</y>
+     <width>621</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QLabel" name="label_11">
+      <property name="font">
+       <font>
+        <family>Ubuntu Condensed</family>
+        <pointsize>12</pointsize>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
+        <underline>false</underline>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
+      </property>
+      <property name="text">
+       <string>Side:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QComboBox" name="dee_side">
+      <item>
+       <property name="text">
+        <string>+</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>-</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_10">
+      <property name="font">
+       <font>
+        <family>Ubuntu Condensed</family>
+        <pointsize>12</pointsize>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
+        <underline>false</underline>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
+      </property>
+      <property name="text">
+       <string>Layer:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QComboBox" name="dee_layer">
+      <item>
+       <property name="text">
+        <string>1</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>2</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>3</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>4</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>5</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_13">
+      <property name="font">
+       <font>
+        <family>Ubuntu Condensed</family>
+        <pointsize>12</pointsize>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
+        <underline>false</underline>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
+      </property>
+      <property name="text">
+       <string>Surface:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QComboBox" name="dee_surface">
+      <item>
+       <property name="text">
+        <string>1</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>2</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>3</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>4</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_14">
+      <property name="font">
+       <font>
+        <family>Ubuntu Condensed</family>
+        <pointsize>12</pointsize>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
+        <underline>false</underline>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
+      </property>
+      <property name="text">
+       <string>Vertical:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QComboBox" name="dee_vertical">
+      <item>
+       <property name="text">
+        <string>up</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>down</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item>
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Fixed</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <widget class="QPushButton" name="select_dee">
+      <property name="text">
+       <string>Select</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="verticalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>39</x>
+     <y>199</y>
+     <width>271</width>
+     <height>141</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QLabel" name="label_6">
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Location:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="ComboBox_MODLocation">
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
+        </property>
+        <item>
+         <property name="text">
+          <string>-</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Louvain</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>CERN</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QLabel" name="label_7">
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Status:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="ComboBox_Status">
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
+        </property>
+        <item>
+         <property name="text">
+          <string>-</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>OK</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Faulty</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_4">
+      <item>
+       <widget class="QLabel" name="label_9">
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Last action:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="ComboBox_LastAction">
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Ubuntu Condensed&quot;;</string>
+        </property>
+        <item>
+         <property name="text">
+          <string>-</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Placement</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Power</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Optical</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Test</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+     </layout>
+    </item>
+   </layout>
+  </widget>
   <action name="actionScan">
    <property name="icon">
     <iconset>
@@ -555,32 +713,34 @@ background-color: rgb(238, 238, 236);
     <string>Scan</string>
    </property>
   </action>
+  <zorder>line_3</zorder>
   <zorder>line</zorder>
   <zorder>label_2</zorder>
-  <zorder>label_6</zorder>
-  <zorder>ComboBox_Status</zorder>
   <zorder>Enter_MODID</zorder>
-  <zorder>ComboBox_MODLocation</zorder>
-  <zorder>label_9</zorder>
   <zorder>MOD_hasknownProb</zorder>
   <zorder>ComboBox_FilterMODByTests</zorder>
   <zorder>table_frame</zorder>
   <zorder>line_2</zorder>
-  <zorder>ComboBox_LastAction</zorder>
   <zorder>label_4</zorder>
   <zorder>MOD_hasNoknownProb</zorder>
   <zorder>sel_all</zorder>
   <zorder>sel_problem</zorder>
-  <zorder>label_7</zorder>
   <zorder>label_5</zorder>
   <zorder>ScanMOD</zorder>
-  <zorder>label_10</zorder>
-  <zorder>Enter_DeeID</zorder>
-  <zorder>checkBox_DeeSurface1</zorder>
-  <zorder>CheckBox_DeeSurface2</zorder>
-  <zorder>label_11</zorder>
   <zorder>module_frame</zorder>
+  <zorder>label_8</zorder>
+  <zorder>line_4</zorder>
+  <zorder>label_12</zorder>
+  <zorder>horizontalLayoutWidget</zorder>
+  <zorder>verticalLayoutWidget</zorder>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QWebView</class>
+   <extends>QWidget</extends>
+   <header>qwebview.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
