--- a/widgets_ui/assembly_status.ui
+++ b/widgets_ui/assembly_status.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1438</width>
+    <width>1852</width>
     <height>862</height>
    </rect>
   </property>
@@ -274,7 +274,7 @@ background-color: rgb(238, 238, 236);
   <widget class="QCommandLinkButton" name="start_assembly">
    <property name="geometry">
     <rect>
-     <x>1260</x>
+     <x>1670</x>
      <y>820</y>
      <width>171</width>
      <height>31</height>
@@ -294,6 +294,53 @@ background-color: rgb(238, 238, 236);
     </rect>
    </property>
    <layout class="QVBoxLayout" name="dee_status_display"/>
+  </widget>
+  <widget class="QFrame" name="next_steps">
+   <property name="geometry">
+    <rect>
+     <x>1250</x>
+     <y>150</y>
+     <width>591</width>
+     <height>651</height>
+    </rect>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_6">
+   <property name="geometry">
+    <rect>
+     <x>1250</x>
+     <y>120</y>
+     <width>591</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_20">
+   <property name="geometry">
+    <rect>
+     <x>1300</x>
+     <y>120</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 75 12pt &quot;Ubuntu Condensed&quot;;
+background-color: rgb(238, 238, 236);
+</string>
+   </property>
+   <property name="text">
+    <string>Next steps</string>
+   </property>
   </widget>
  </widget>
  <resources/>
