--- a/widgets_ui/assembly_status.ui
+++ b/widgets_ui/assembly_status.ui
@@ -271,19 +271,6 @@ background-color: rgb(238, 238, 236);
     <string>Status</string>
    </property>
   </widget>
-  <widget class="QCommandLinkButton" name="start_assembly">
-   <property name="geometry">
-    <rect>
-     <x>1670</x>
-     <y>820</y>
-     <width>171</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Start/Continue Assembly</string>
-   </property>
-  </widget>
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
@@ -301,7 +288,7 @@ background-color: rgb(238, 238, 236);
      <x>1250</x>
      <y>150</y>
      <width>591</width>
-     <height>651</height>
+     <height>701</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -310,6 +297,29 @@ background-color: rgb(238, 238, 236);
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
+   <widget class="QScrollArea" name="next_steps_area">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>571</width>
+      <height>681</height>
+     </rect>
+    </property>
+    <property name="widgetResizable">
+     <bool>true</bool>
+    </property>
+    <widget class="QWidget" name="scrollAreaWidgetContents">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>569</width>
+       <height>679</height>
+      </rect>
+     </property>
+    </widget>
+   </widget>
   </widget>
   <widget class="Line" name="line_6">
    <property name="geometry">
