first steps in tests window

--- a/widgets_ui/guide_assembly.ui
+++ b/widgets_ui/guide_assembly.ui
@@ -178,7 +178,7 @@ p, li { white-space: pre-wrap; }
      <height>41</height>
     </rect>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
+   <layout class="QHBoxLayout" name="navigation_layout">
     <item>
      <widget class="QPushButton" name="previous_button">
       <property name="text">
