--- a/widgets_ui/guide_assembly.ui
+++ b/widgets_ui/guide_assembly.ui
@@ -234,6 +234,19 @@ p, li { white-space: pre-wrap; }
     <string>Cancel operation</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="add_picture">
+   <property name="geometry">
+    <rect>
+     <x>1400</x>
+     <y>590</y>
+     <width>121</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>add picture</string>
+   </property>
+  </widget>
  </widget>
  <customwidgets>
   <customwidget>
